--- a/CurrencyTestTask/Views/Home/Index.cshtml
+++ b/CurrencyTestTask/Views/Home/Index.cshtml
@@ -6,18 +6,21 @@
 <div class="text-center">
     <h1 class="display-4">Currency Exchange</h1>
 
-    <form method="post">
-        <div class="mb-3">
-            <label for="amount" class="form-label">Amount to convert</label>
-            <input type="number" step="0.01" class="form-control" id="amount" name="Amount" asp-for="OriginalValue" required>
-        </div>
+    <form method="post" action="/Home/ConvertCurrency">
+
+        @Html.AntiForgeryToken()
+            <div class="mb-3">
+                <label for="amount" class="form-label">Amount to convert</label>
+                <input type="number" step="0.01" class="form-control" id="amount" name="OriginalValue" asp-for="OriginalValue" required>
+            </div>
+
 
         <div class="mb-3">
             <label for="currencyFrom" class="form-label">From</label>
             <select class="form-select" id="currencyFrom" name="CurrencyFrom" asp-for="CurrencyFrom">
                 @foreach (var currency in Model.Currencies)
                 {
-                    <option value="@currency">@currency</option>
+                    <option value="@currency" selected="@(currency == Model.CurrencyFrom ? "selected" : null)">@currency</option>
                 }
             </select>
         </div>
@@ -25,11 +28,12 @@
         <div class="mb-3">
             <label for="currencyTo" class="form-label">To</label>
             <select class="form-select" id="currencyTo" name="CurrencyTo" asp-for="CurrencyTo">
-                @foreach (var currency in Model.Currencies)
+                @for (int i = 0; i < Model.Currencies.Count; i++)
                 {
-                    <option value="@currency">@currency</option>
+                    <option value="@Model.Currencies[i]" selected="@(Model.CurrencyTo != null && Model.Currencies[i] == Model.CurrencyTo? "selected" : i == 1 ? "selected" :  null)">@Model.Currencies[i]</option>
                 }
             </select>
+
         </div>
 
         <button type="submit" class="btn btn-primary">Convert</button>
@@ -38,6 +42,7 @@
     @if (@Model.ConvertedValue.HasValue)
     {
         <div class="mt-4">
+            <label for="message" asp-for="Message" class="form-label"></label>
             <h3>Converted Amount: @Model.ConvertedValue.Value.ToString("N2") @Model.CurrencyTo</h3>
         </div>
     }
